examples/neg/high_loop_grow/bob.oio
BOB

network channel ALICE/A1@{H} : int@{H};
network channel ALICE/A2@{H} : int@{H};
local channel STDOUT: int@{H};

var bobs_secret : int@{H} = 0;

START@{} (i : int@{}) {
    send(ALICE/A1, bobs_secret);
}

B1@{H} (secret : int@{H}) {
    oblif secret
    then send(ALICE/A1, secret);
    else skip;
}

B2@{H} (secret : int@{H}) {
    output(STDOUT, secret);
    send(ALICE/A2, secret);
}
